# rondine

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md  install.ps1  install.sh  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: rondine.txt
catalog/: hardware.toml  models.toml
docs/: benchmarks.md  cli.md  cluster.md  coding.md  engine-tuning.md  hardware-gates.md  index.md  install.md
docs/stylesheets/: extra.css
src/rondine/: __init__.py  catalog.py  cli.py  cluster.py  detect.py  hub.py  paths.py  planner.py  presets.py  process.py  suggest.py  ux.py  verify.py
src/rondine/engines/: __init__.py  base.py  llama_cpp.py  mlx.py  vllm.py
tests/: test_catalog.py  test_cli.py  test_cluster.py  test_engines.py  test_hub.py  test_planner.py  test_presets.py  test_suggest.py  test_ux.py
tools/: record-demo.exp  record-demo.sh
