[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rondine"
version = "0.1.0"
description = "Hardware-aware local LLM launcher for Mac, NVIDIA GPUs, and DGX Spark"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "rondine contributors" }]
keywords = ["llm", "llama.cpp", "mlx", "vllm", "gguf", "local-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "huggingface-hub>=0.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
  "mypy>=1.14",
]

[project.scripts]
rondine = "rondine.cli:main"

[project.urls]
Homepage = "https://github.com/antonellof/rondine"
Repository = "https://github.com/antonellof/rondine"

[tool.hatch.build.targets.wheel]
only-include = ["rondine"]

[tool.hatch.build.targets.wheel.force-include]
"src/rondine" = "rondine"
"catalog/models.toml" = "rondine/catalog/models.toml"
"catalog/hardware.toml" = "rondine/catalog/hardware.toml"
"assets/rondine.txt" = "rondine/assets/rondine.txt"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
  "mypy>=1.14",
  "types-requests",
]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/catalog",
  "/assets",
  "/docs",
  "/tests",
  "/README.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["rondine"]
mypy_path = "src"
